removed border radius

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ border: 20px black !important;
 }
 
 .table {
-  border-radius: 20px; 
+  /* border-radius: 20px;  */
   background-color: white;
 }
 .tableX {
